# bc

./: .clang-format  .gitignore  .gitmodules  .htaccess  .travis.yml  .tx2html  CMakeLists.txt  LICENSE  LICENSE.md  MAINTENANCE-TERMS.md  MEMORY_BUGS.md  Makefile  Makefile.in  NEWS.md  NOTICE.md  README  README.html  README.md  RELEASE.md  TODO.md  bc.vcxproj  bcl.pc.in  bcl.vcxproj  build.gaml  build.pkg.rig  build.rig  burnzieg.py  catalogs.sh  codecov.yml  compile_flags.txt  configure  configure.sh  functions.sh  install.sh  karatsuba.py  link.sh  locale.sh  locale_install.sh  locale_uninstall.sh  locales.sh  (+4 more)
arbprec/: LICENSE  Makefile  README  README.html
arbprec/notes/: base_conversion.txt  base_conversion_of_fractional_parts.txt  bit-studies.c  conv_table_example.txt  dalias-on-sqrt-guess.txt  dalias_fast_mod.txt  format-suggestion-thalhiem  generatelogs.c  goldschmidt.c  karatsuba.txt  log-notes.txt  logtest.c  newton-sqrt.txt  normalization.txt  posix-bc-notes.txt  trials_new_add.txt  wrapper-netwon.sh
arbprec/src/: add-sub.c  algd.c  arb2hrdware.c  arb_print.c  babylonian-sqrt.c  compare.c  convert.c  copy.c  exponentation.c  general.c  hrdware2arb.c  karatsuba-mul.c  logical-shift.c  long-multiplication.c  maxi.c  modulo.c  newtonian-division.c  newtonian-division.c.bak  newtonian-sqrt.c  short_mul.c  str2fxdpnt.c
arbprec/tests/: add.c  addregressions.sh  algd.c  conv.c  conv_frac.c  convall.c  convregressions.sh  convscaled.c  divregression.sh  exp.c  inaccurate_base.sh  karatsuba-mul-giant.c  karatsuba-mul.c  karatsuba-mulregression.sh  left-shift.c  long-mul-giant.c  mod.c  mul.c  mul2.c  mul3.c  mul3_fix.c  mulregression.sh  mulregression2.sh  newtonian-div.c.bak  notemp.c  nsqrt.c  regressions.sh  sqrt.c  sub.c  subregression.sh  test-arbitrary-precision.c  testall.sh  wrap-add.sh  wrap-conv.sh  wrap-div.sh  wrap-karatsuba-mul.sh  wrap-mul.sh  wrap-mul2.sh  wrap-notemp.sh  wrap-sub.sh  (+1 more)
arbprec/tiny-bc/: README  bc.c  bc.h  compile.sh  dcl.c  error.c  lex.c  lex.h  parse.c  parse.h  program.c  program.h  segarray.c  segarray.h  stack.c  stack.h  tiny-bc.c  vm.c  vm.h
bc/: Makefile  README  bc.c  main.c
bc/src/: bc.c  data.c  error.c  io.c  lex.c  parse.c  program.c  segarray.c  stack.c  vm.c
bc/tests/: basic.sh  fetch_outside_bclibs.sh
benchmarks/bc/: add.bc  arrays.bc  arrays_and_constants.bc  arrays_and_numbers.bc  bitfuncs.bc  constants.bc  divide.bc  functions.bc  multiply.bc  (+7 more)
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
gsh/: LICENSE  Makefile  README  README.html  gsh.c
include/: CMakeLists.txt  args.h  bc.h  bcl.h  data.h  dc.h  file.h  history.h  instructions.h  io.h  lang.h  lex.h  library.h  num.h  opt.h  ossfuzz.h  parse.h  program.h  rand.h  read.h  status.h  vector.h  version.h  vm.h
include/bc/: bc.h  data.h  instructions.h  io.h  lex.h  num.h  parse.h  program.h  segarray.h  stack.h  vector.h  vm.h
ironwill/: Makefile  README  README.html  build.sh
lib/: gen.c  header.c  lib.bc
locale/: en.msg  en_US.msg
locales/: de.ISO8859-1.msg  de.UTF-8.msg  de_AT.ISO8859-1.msg  de_CH.UTF-8.msg  de_DE.ISO8859-1.msg  de_DE.UTF-8.msg  en.msg  en_US.UTF-8.msg  en_US.msg  es_ES.ISO8859-1.msg  es_ES.UTF-8.msg  fr_FR.ISO8859-1.msg  fr_FR.UTF-8.msg  ja_JP.UTF-8.msg  ja_JP.eucJP.msg  nl_NL.ISO8859-1.msg  nl_NL.UTF-8.msg  pl_PL.ISO8859-2.msg  pl_PL.UTF-8.msg  pt_BR.UTF-8.msg  pt_BR.utf8.msg  pt_PT.ISO-8859-15.msg  pt_PT.ISO8859-1.msg  pt_PT.UTF-8.msg  ru_RU.CP1251.msg  ru_RU.CP866.msg  ru_RU.ISO8859-5.msg  ru_RU.KOI8-R.msg  ru_RU.UTF-8.msg  zh_CN.GB18030.msg  zh_CN.GB2312.msg  zh_CN.GBK.msg  zh_CN.UTF-8.msg  zh_CN.eucCN.msg
manuals/: algorithms.md  bc.1  bc.1.md.in  bc.1.ronn  bc.1.ronn.in  bc.md  bcl.3  bcl.3.md  benchmarks.md  build.md  dc.1  dc.1.md.in  dc.1.ronn  dc.1.ronn.in  dc.md  development.md  header.txt  header_bc.txt  header_bcl.txt  header_dc.txt  release.md
newlibm/: Makefile  README  README.html
posix/: Makefile  README  README.html  basename.c  cat.c  cp.c  cutils.h  date.c  dd.c  du.c  echo.c  fetch.c  find.c  fold.c  grep.c  head.c  ls.c  mkdir.c  rm.c  sleep.c  strings.c  tail.c  wc.c  which.c
project/: github_issues.json  github_prs.json  issue_2025-12-14.md  issue_2025-12-14.rtf
readline/: Makefile
realpath/: realpath.c
scripts/: afl.py  alloc.sh  benchmark.sh  bitfuncgen.c  bitgen.c  exec-install.sh  format.sh  functions.sh  fuzz_prep.sh  github.pkg.yao  github.yao  history.py  karatsuba.py  link.sh  lint.sh  locale_install.sh  locale_uninstall.sh  manpage.sh  os.c  package.sh  radamsa.sh  randmath.py  release.pkg.yao  release.sh  release.yao  release_flags_rig.txt  release_settings.txt  release_settings_rig.txt  safe-install.sh  sqrt_frac_guess.bc  sqrt_int_guess.bc  sqrt_random.bc  sqrt_random.sh  test_settings.sh
src/: CMakeLists.txt  args.c  args.h  bc.c  bc.h  bc_fuzzer.c  bc_lex.c  bc_parse.c  data.c  dc.c  dc.h  dc_fuzzer.c  dc_lex.c  dc_parse.c  file.c  file.h  history.c  history.h  io.c  lang.c  lang.h  lex.c  lex.h  library.c  library.h  main.c  num.c  num.h  opt.c  parse.c  parse.h  program.c  program.h  rand.c  rand.h  read.c  read.h  status.h  vector.c  vector.h  (+2 more)
src/bc/: bc.c  data.c  io.c  lang.c  lex.c  num.c  parse.c  program.c  segarray.c  stack.c  vector.c  vm.c
src/dc/: dc.c  lex.c  parse.c
src/history/: history.c
src/lib/: gen.c  lib.bc
src/rand/: rand.c
tests/: add.txt  add_results.txt  afl.py  afl.sh  all.sh  all.txt  alloc.sh  arctangent.txt  arctangent_results.txt  basic.txt  bcl.c  cosine.txt  cosine_results.txt  divide.txt  e_power.txt  e_power_results.txt  error.sh  errors.sh  errors.txt  functions.sh  functions.tcl  history.py  history.sh  log.txt  manual.sh  modulus.txt  modulus_results.txt  multiply.txt  multiply_results.txt  nonregular_streaming.sh  other.sh  parse_print_decimal.sh  parse_print_decimal.txt  posix_errors.txt  power.txt  power_results.txt  radamsa.sh  randmath.py  randmath.sh  read.sh  (+15 more)
toybox/: files.txt  footer.c  header.c  release.py
vs/: .gitignore  bc.vcxproj  bcl.sln  bcl.vcxproj
(+341 files in other folders)
